--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "async": "^2.6.1",
     "bleacon": "^0.5.1",
+    "lodash": "^4.17.11",
+    "moment-timer": "^1.3.0",
     "noble": "^1.9.1",
     "node-beacon-scanner": "^0.1.0",
     "node-bluetooth": "^1.2.3",
+    "save": "^2.3.2",
+    "timer-stopwatch": "^0.2.0",
     "ws": "^6.1.0"
   }
 }
